--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <h1>Search for an Artist</h1>
       <p>Type an artist name and click on "Search" to see information about your favorite musician!</p>
-      <input type="text" id="query" value="" class="form-control" placeholder="Enter an artist name, like Ricc Flairr">
+      <input type="text" id="query" value="" class="form-control" placeholder="Enter an track name, like Californication">
       <button id="search" class="btn btn-primary" value="Search">Search</button>
       <button id="login" class="btn btn-primary" value="Login">Login</button>
       <div id="results"></div>
